# VibeCoding101

./: .gitignore
001-email-triage-agent/: README.md  agent.py  app.py  main.py  pyproject.toml  schema.py  utils.py
002-pdf-insight-agent/: README.md  pyproject.toml
002-pdf-insight-agent/app/: main.py
002-pdf-insight-agent/core/: __init__.py  analyzer.py  chunker.py  output_formatter.py  pdf_loader.py  pipeline.py  vector_store.py
002-pdf-insight-agent/data/vector_db/: chroma.sqlite3
002-pdf-insight-agent/ui/: __init__.py  output.py  sidebar.py
003-meeting-action-agent/: README.md  pyproject.toml
004-knowledge-agent/: README.md  app.py  demo.py  main.py  pyproject.toml
005-expense-intelligence-agent/: pyproject.toml
005-expense-intelligence-agent/app/: main.py  ui_sections.py
005-expense-intelligence-agent/data/: sample1.csv  sample2.csv  sample3.csv
005-expense-intelligence-agent/modules/: categorizer.py  csv_loader.py  patterns.py  recommendations.py
005-expense-intelligence-agent/src/expense_intelligence_agent/: __init__.py
011-job-application-agent/: README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
011-job-application-agent/app/: main.py
011-job-application-agent/app/api/: helpers.py  models.py  routes.py
011-job-application-agent/app/core/: analyzer.py  chunks.py  fallback.py  graph.py  llm.py  parser.py  prompt.py  retriever.py  state.py
011-job-application-agent/app/ui/: api.py  streamlit_app.py
011-job-application-agent/src/job_application_agent/: __init__.py
011-job-application-agent/tests/: resume.txt  ui.spec.js
013-research-planner-agent/: README.md  pyproject.toml
013-research-planner-agent/app/: __init__.py
013-research-planner-agent/app/api/: __init__.py  main.py  planner.py
013-research-planner-agent/app/core/: __init__.py  config.py  llm.py  prompts.py
013-research-planner-agent/app/graph/: __init__.py  nodes.py  state.py  workflow.py
013-research-planner-agent/app/models/: schemas.py
013-research-planner-agent/app/ui/: client.py  main.py  render.py
013-research-planner-agent/docs/: app_flow.md
013-research-planner-agent/src/013_research_planner_agent/: __init__.py
013-research-planner-agent/src/research_planner_agent/: __init__.py
013-research-planner-agent/tests/: test_api.py  test_client.py
014-contract-risk-agent/: README.md  api.py  app.py  config.py  graph.py  models.py  pyproject.toml
014-contract-risk-agent/core/: llm.py  loader.py  postprocess.py  prompts.py  retriever.py  splitter.py  validate.py  vectorstore.py
014-contract-risk-agent/samples/: contract_vendor_alpha.txt  contract_vendor_beta.txt
014-contract-risk-agent/services/: analyze.py
014-contract-risk-agent/src/contract_risk_agent/: __init__.py
014-contract-risk-agent/tests/: test_api.py  test_core.py  test_postprocess.py
014-contract-risk-agent/ui/: client.py  results.py  sidebar.py  upload.py
015-feedback-intelligence-agent/: README.md  app.py  pyproject.toml
015-feedback-intelligence-agent/data/: latest_feedback.txt
015-feedback-intelligence-agent/src/feedback_intelligence_agent/: __init__.py
015-feedback-intelligence-agent/src/feedback_intelligence_agent/api/: main.py
015-feedback-intelligence-agent/src/feedback_intelligence_agent/core/: analyze.py  cluster.py  dataset.py  error_text.py  flow.py  graph.py  json_utils.py  llm.py  nodes.py  normalize.py  parser.py  prompts.py  results.py  schemas.py  state.py  store.py  summarize.py
015-feedback-intelligence-agent/src/feedback_intelligence_agent/ui/: client.py  render.py
016-finance-coach-agent/: README.md  pyproject.toml  sample.csv
016-finance-coach-agent/frontend/: app.py  client.py  render.py
016-finance-coach-agent/src/finance_coach_agent/: __init__.py  main.py
016-finance-coach-agent/src/finance_coach_agent/api/: app.py  routes.py
016-finance-coach-agent/src/finance_coach_agent/core/: prompts.py  settings.py
016-finance-coach-agent/src/finance_coach_agent/graph/: builder.py  nodes.py  state.py
016-finance-coach-agent/src/finance_coach_agent/models/: schemas.py
016-finance-coach-agent/src/finance_coach_agent/services/: advisor.py  csv_parser.py  fallbacks.py  llm_client.py  validator.py
(+61 files in other folders)
