[project]
name = "pdf-insight-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "reportlab>=4.4.10",
    "streamlit>=1.56.0",
]
