[project]
name = "expense-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rishisan99", email = "santhoshrishi9999@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]

[project.scripts]
expense-intelligence-agent = "expense_intelligence_agent:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
