[project]
name = "finance-coach-agent"
version = "0.1.0"
description = "Simple finance coach with FastAPI, Streamlit, and LangGraph"
readme = "README.md"
authors = [
    { name = "rishisan99", email = "santhoshrishi9999@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.10",
    "openai>=2.34.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
